🐛 fixed OIDC settings page not showing up after enabling in global settings 🐛 fixed display issues in the dark style 🐛 fixed navbar height changing unexpectedly ⬆️ updated package dependencies

--- a/imports/ui/styles/dark.scss
+++ b/imports/ui/styles/dark.scss
@@ -499,5 +499,7 @@ g > text {
 .gantt .bar {
     fill:                   $lightgrey !important;
 }
-
+#period {
+    background-color:           $input-button-background-color !important;
+}
 @import "{}/imports/ui/styles/general.scss";
